crates/mun_codegen/src/snapshots/test__extern_fn_file_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "extern fn add(a:int, b:int): int;\nfn main() {\n    add(3,4);\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

%DispatchTable = type { i64 (i64, i64)* }
%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@dispatchTable = external global %DispatchTable
@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define void @main() {
body:
  %add_ptr = load i64 (i64, i64)*, i64 (i64, i64)** getelementptr inbounds (%DispatchTable, %DispatchTable* @dispatchTable, i32 0, i32 0)
  %add = call i64 %add_ptr(i64 3, i64 4)
  ret void
}

