crates/mun_codegen/src/snapshots/test__field_crash_file_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "struct(gc) Foo { a: int };\n\nfn main(c:int):int {\n    let b = Foo { a: c + 5 }\n    b.a\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

%DispatchTable = type { i8* addrspace(4)* (i8 addrspace(4)*, i8*)* }
%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }
%Foo = type { i64 }

@allocatorHandle = external global i8*
@dispatchTable = external global %DispatchTable
@global_type_table = external global [5 x %struct.MunTypeInfo addrspace(4)*]

define i64 @main(i64) {
body:
  %b = alloca %Foo* addrspace(4)*
  %c = alloca i64
  store i64 %0, i64* %c
  %c1 = load i64, i64* %c
  %add = add i64 %c1, 5
  %init = insertvalue %Foo undef, i64 %add, 0
  %new_ptr = load i8* addrspace(4)* (i8 addrspace(4)*, i8*)*, i8* addrspace(4)* (i8 addrspace(4)*, i8*)** getelementptr inbounds (%DispatchTable, %DispatchTable* @dispatchTable, i32 0, i32 0)
  %Foo_ptr = load %struct.MunTypeInfo addrspace(4)*, %struct.MunTypeInfo addrspace(4)** getelementptr inbounds ([5 x %struct.MunTypeInfo addrspace(4)*], [5 x %struct.MunTypeInfo addrspace(4)*]* @global_type_table, i32 0, i32 0)
  %type_info_ptr_to_i8_ptr = bitcast %struct.MunTypeInfo addrspace(4)* %Foo_ptr to i8 addrspace(4)*
  %allocator_handle = load i8*, i8** @allocatorHandle
  %new = call i8* addrspace(4)* %new_ptr(i8 addrspace(4)* %type_info_ptr_to_i8_ptr, i8* %allocator_handle)
  %Foo_ptr_ptr = bitcast i8* addrspace(4)* %new to %Foo* addrspace(4)*
  %Foo_mem_ptr = load %Foo*, %Foo* addrspace(4)* %Foo_ptr_ptr
  store %Foo %init, %Foo* %Foo_mem_ptr
  store %Foo* addrspace(4)* %Foo_ptr_ptr, %Foo* addrspace(4)** %b
  %mem_ptr = load %Foo* addrspace(4)*, %Foo* addrspace(4)** %b
  %deref = load %Foo*, %Foo* addrspace(4)* %mem_ptr
  %Foo.a = getelementptr inbounds %Foo, %Foo* %deref, i32 0, i32 0
  %a = load i64, i64* %Foo.a
  ret i64 %a
}

