crates/mun_codegen/src/snapshots/test__function_calls_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn add_impl(a:int, b:int):int {\n    a+b\n}\n\nfn add(a:int, b:int):int {\n  add_impl(a,b)\n}\n\nfn test():int {\n  add(4,5)\n  add_impl(4,5)\n  add(4,5)\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { i64 (i64, i64)*, i64 (i64, i64)* }

@dispatchTable = global %DispatchTable { i64 (i64, i64)* @add_impl, i64 (i64, i64)* @add }

declare i64 @add_impl(i64, i64)

declare i64 @add(i64, i64)

