crates/mun_codegen/src/snapshots/test__let_statement.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main(a:int):int {\n  let b = a+1\n  b\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

define i64 @main(i64 %a) {
body:
  %add = add i64 %a, 1
  ret i64 %add
}

